# hockey

./: .gitignore  README.md  pyproject.toml
src/altiusrt/: main.py
src/altiusrt/spiders/: __init__.py  competition_matches.py  competition_teams.py  competitions.py  match_details.py  players.py
